# hodei

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  ROADMAP.md
.claude/: settings.local.json
crates/hodei-app/: Cargo.toml
crates/hodei-app/src/: app.rs  devtools_bridge.rs  main.rs
crates/hodei-core/: Cargo.toml  build.rs
crates/hodei-core/examples/: hud_snapshot.rs
crates/hodei-core/src/: bookmarks.rs  compositor.rs  config.rs  db.rs  hint.rs  history.rs  hud.rs  icons.rs  input.rs  layout.rs  lib.rs  search.rs  session.rs  suggest.rs  types.rs  view.rs  workspace.rs
crates/hodei-core/tests/: integration.rs
crates/hodei-servo/: Cargo.toml
crates/hodei-servo/src/: context.rs  delegate.rs  events.rs  lib.rs
crates/orthogonal-app/: Cargo.toml
crates/orthogonal-app/src/: app.rs
crates/orthogonal-core/: Cargo.toml  build.rs
crates/orthogonal-core/src/: bookmarks.rs  compositor.rs  db.rs  hud.rs  input.rs  layout.rs  lib.rs  search.rs  session.rs  types.rs  view.rs
crates/orthogonal-servo/: Cargo.toml
crates/orthogonal-servo/src/: context.rs  delegate.rs  events.rs  lib.rs
docs/superpowers/plans/: 2026-04-16-hodei-v0.1.0.md  2026-04-16-orthogonal-v0.1.0.md  2026-04-16-v0.2-implementation.md  2026-04-19-hodei-mairu-phase-1.md  2026-04-19-orthogonal-mairu-phase-1.md
docs/superpowers/specs/: 2026-04-16-hodei-browser-design.md  2026-04-16-orthogonal-browser-design.md  2026-04-16-v0.2-iteration-design.md  2026-04-19-hodei-mairu-phase-1-design.md  (+1 more)
migrations/: 001_init.sql  002_history_bookmarks.sql  003_workspaces.sql
ui/: hud.slint
(+2 files in other folders)
